<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sales App</string>
    <string name="store_1">Store 1</string>
    <string name="all">All</string>
    <string name="condiments">Condiments</string>
    <string name="drinks">Drinks</string>
    <string name="junk_food">Junk Food</string>
    <string name="bread">Bread</string>
    <string name="canned_goods">Canned Goods</string>

    <!-- Product Names from previous screen -->
    <string name="piattos_cheese">Piattos - Cheese</string>
    <string name="magic_sarap">Magic Sarap</string>
    <string name="heinz_ketchup">Heinz Ketchup</string>
    <string name="cdo_corned_beef">CDO Corned Beef</string>
    <string name="cinnamon_roll">Cinnamon Roll</string>
    <string name="chicharon">Chicharron ni Mang Juan</string>
    <string name="knorr_seasoning">Knorr Liquid Seasoning</string>
    <string name="papa_ketchup">Papa Banana Ketchup</string>
    <string name="delmonte_ketchup">Del Monte Sweet Blend Ketchup</string>
    <string name="silver_swan_soy">Silver Swan Soy Sauce</string>
    <string name="coca_cola">Coca Cola - 1.5 Liter</string>
    <string name="mountain_dew">Mountain Dew - 295 ml</string>
    <string name="sprite">Sprite - 1.5 Liter</string>
    <string name="yakult">Yakult</string>
    <string name="chuckie">Chuckie Chocolate Drink - 250 ml</string>
    <string name="loaf_bread">Gardenia Loaf Bread</string>
    <string name="pandesal">Pandesal</string>
    <string name="spanish_bread">Spanish Bread</string>
    <string name="monggo_bread">Monggo Bread</string>
    <string name="spam_classic">Spam Classic</string>
    <string name="sardines_555">555 Sardines Tomato Sauce</string>
    <string name="century_tuna">Century Tuna Flakes</string>
    <string name="maling_luncheon">Maling Chicken Luncheon Meat</string>
    <string name="chicharron_ni_mang_juan">Chicharron ni Mang Juan</string>
    <string name="cheezy_corn_crunch">Cheezy Corn Crunch</string>
    <string name="mr_chips">Mr. Chips</string>
    <string name="clover_chips">Clover Chips</string>
    <string name="silver_swan_vinegar">Silver Swan Vinegar</string>

    <!-- Adding items in sales logging -->
    <string name="new_product_image">New product image</string>


    <!-- Bottom Navigation -->
    <string name="home">Home</string>
    <string name="logging">Logging</string>
    <string name="pos">POS</string>
    <string name="settings">Settings</string>

    <!-- Content Descriptions -->
    <string name="menu_button">Menu</string>
    <string name="add_item">Add new item</string>
    <string name="chart_placeholder">Chart Placeholder</string>

    <!-- Sales Logging Add Item Modal -->
    <string name="add_item_header">Add Item</string>
    <string name="upload_image">Upload Image</string>
    <string name="item_name">Name</string>
    <string name="original_cost">Original Cost</string>
    <string name="markup">Markup</string>
    <string name="ingredients">Ingredients</string>
    <string name="cost">Cost</string>
    <string name="add">Add</string>
    <string name="total_calculated_cost">Total Calculated Cost</string>
    <string name="list_item">List Item</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="ingredient_name_hint">Ingredient name</string>
    <string name="cost_hint">Cost</string>
    <string name="default_web_client_id">185870797972-l4shkjv4mrhv542h1qcgcscrh4skpfac.apps.googleusercontent.com</string>
    <string name="hello_user_placeholder">Hello %1$s!</string>
</resources>

